<resources>
    <string name="app_name">Happy Teacher</string>
    <string name="title_board">Board</string>
    <string name="title_topics">Topics</string>
    <string name="title_contribute">Contribute</string>
    <string name="standard_n">Standard %d</string>
    <string name="choose_your_syllabus">Choose your board.</string>
    <string name="you_can_change_this_later">You can change this later.</string>
    <string name="there_are_no_lessons_for_this_topic_yet">There are no lessons for this topic yet.</string>
    <string name="contribute">Contribute</string>
    <string name="this_lesson_has_no_relevant_topics">This lesson has no relevant topics.</string>
    <string name="there_are_no_topics_for_this_subject_yet">There are no topics for this subject yet.</string>
    <string name="there_are_currently_no_lesson_plans_for_this_subject_and_level">There are currently no lesson plans for this subject and level.</string>
    <string name="no_lessons_at_level_yet">There are no lessons for this topic at the Standard %d level yet.</string>
    <string name="there_was_an_error_loading_this_lesson">There was an error loading this lesson.</string>
    <string name="there_was_an_error_loading_this_classroom_resource">There was an error loading this classroom resource.</string>
    <string name="downloading">Downloading…</string>
    <string name="canceling">Canceling…</string>
    <string name="open_x">Open %s</string>
    <string name="download_failed">Download failed</string>
    <string name="file_with_size_in_mb" translatable="false">%1$s (%2$.2f MB)</string>
    <string name="loading_attachment">Loading attachment…</string>
    <string name="download_canceled">Download canceled</string>
    <string name="do_you_want_to_delete_this_file_from_your_device">Do you want to delete this file from your device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_file_is_no_longer_available_try_downloading_it_again">The file is no longer available. Try downloading it again.</string>
    <string name="plus_number" translatable="false">+%d</string>
    <string name="see_all_n_lesson_plans_for_lesson">See all %1$d lesson plans for %2$s</string>
    <string name="error_loading_other_lessons">There was an error loading these lesson plans</string>
    <string name="other_lesson_plans">Other lesson plans</string>
    <string name="there_are_no_other_lessons">There are no other lessons.</string>
    <string name="classroom_resources">Classroom Resources</string>
    <string name="there_are_no_classroom_resources_for_this_lesson_yet">There are no classroom resources for this lesson yet.</string>
    <string name="unable_to_load_youtube_video">Unable to load video.</string>
    <string name="open_in_youtube">Open in YouTube</string>
    <string name="load_Video">Load video</string>
    <string name="play_video">Play video</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="change_language">Change language</string>
    <string name="english_in_english" translatable="false">English</string>
    <string name="marathi_in_marathi" translatable="false">मराठी</string>
    <string name="there_was_an_error_loading_these_lesson_plans">There was an error loading these lesson plans.</string>
    <string name="there_was_an_error_loading_the_other_lessons">There was an error loading the other lessons.</string>
    <string name="there_was_an_error_loading_topics_for_this_subject">There was an error loading topics for this subject.</string>
    <string name="there_was_an_error_loading_classroom_resources_for_this_lesson">There was an error loading classroom resources for this lesson.</string>
    <string name="there_was_an_error_loading_lessons_for_this_topic">There was an error loading lessons for this topic.</string>
    <string name="sign_in">Sign in</string>
    <string name="profile">Profile</string>
    <string name="sign_in_canceled">Sign in canceled</string>
    <string name="sign_in_failed_network_error">Sign in failed due to network error</string>
    <string name="sign_in_failed">Sign in failed. Try again later</string>
    <string name="settings">Settings</string>
    <string name="you_must_have_google_play_service_to_do_this">You must have Google Play Services to do this.</string>
    <string name="there_was_an_issue_choosing_a_location">There was an issue choosing a location</string>
    <string name="sign_out">Sign out</string>
    <string name="contributor_profile">Contributor Profile</string>
    <string name="your_first_and_last_name">Your first and last name</string>
    <string name="name">Name</string>
    <string name="the_name_of_the_institution_you_are_affiliated_with">The name of the institution you are affiliated with</string>
    <string name="institution_name">Institution name</string>
    <string name="the_location_of_your_institution">The location of your institution</string>
    <string name="location">Location</string>
    <string name="general_settings">General Settings</string>
    <string name="tap_to_select_which_education_board_you_prefer">Tap to select which education board you prefer</string>
    <string name="preferred_education_board">Preferred education board</string>
    <string name="there_are_no_lessons_available_for_this_board">There are no lessons available for this board.</string>
    <string name="there_was_an_error_loading_lessons_for_this_board">There was an error loading lessons for this board.</string>
    <string name="you_are_signed_in">You are signed in</string>
    <string name="you_must_be_signed_in_to_contribute">You must be signed in to contribute.</string>
    <string name="update_profile">Update profile</string>
    <string name="you_need_to_complete_your_contributor_profile_before_you_can_contribute">You need to complete your Contributor Profile before you can contribute.</string>
    <string name="reviewer_notifications">Reviewer Notifications</string>
    <plurals name="topics_count">
        <item quantity="one">%d topic</item>
        <item quantity="other">%d topics</item>
    </plurals>
    <string name="drafts">Drafts</string>
    <string name="submitted">Submitted</string>
    <string name="published_tab">Published</string>
    <string name="create_a_lesson_plan">Create a lesson plan</string>
    <string name="choose_what_your_lesson_will_be_about">Choose what your lesson will be about.</string>
    <string name="write_lesson">Write lesson</string>
    <string name="lesson_editor">Lesson Editor</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="draft_deleted">Draft deleted.</string>
    <string name="section_deleted">Section deleted.</string>
    <string name="delete_empty_lesson_question">Delete empty lesson?</string>
    <string name="delete_empty_classroom_resource_question">Delete empty classroom resource?</string>
    <string name="delete_empty_resource_question">Delete empty resource?</string>
    <string name="there_are_no_sections_in_this_lesson_would_you_like_to_delete_it">There are no sections in this lesson. Would you like to delete it?</string>
    <string name="there_are_no_sections_in_this_classroom_resource_would_you_like_to_delete_it">There are no sections in this classroom resource. Would you like to delete it?</string>
    <string name="there_are_no_sections_in_this_resource_would_you_like_to_delete_it">There are no sections in this resource. Would you like to delete it?</string>
    <string name="you_have_no_drafts_yet">You don\'t have any drafts yet.</string>
    <string name="there_was_an_error_loading_your_drafts">There was an error loading your drafts.</string>
    <string name="you_have_no_submitted_contributions">You don\'t have any submitted contributions yet.</string>
    <string name="there_was_an_error_loading_your_submissions">There was an error loading your submissions</string>
    <string name="you_have_no_published_contributions">You don\'t have any published contributions yet.</string>
    <string name="there_was_an_error_loading_your_published_contributions">There was an error loading your published contributions</string>
    <string name="section_name">Section name</string>
    <string name="section_text">Section text</string>
    <string name="section_editor">Section Editor</string>
    <string name="save">Save</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="add_file">Add File</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="remove_video">Remove video</string>
    <string name="youtube_url_not_recognized">Youtube URL not recognized.</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="you_have_changed_this_section_would_you_like_to_save_your_changes">You have changed this section. Would you like to save your changes?</string>
    <string name="discard_changes">Discard changes</string>
    <string name="image_url">Image URL…</string>
    <string name="add_image_by_url">Add image by URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="image_added_to_section">Image added to section</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="add_an_image">Add an image</string>
    <string name="a_section_cannot_have_images_and_a_video">A section cannot have images and a video.</string>
    <string name="you_can_only_have_n_images_per_section">You can only have %d images per section</string>
    <string name="dont_close">Don\'t close</string>
    <string name="empty_section">Empty section</string>
    <string name="this_section_is_empty_would_you_like_to_delete_it">This section is empty. Would you like to delete it?</string>
    <string name="delete_section">Delete section</string>
    <string name="save_empty_section">Save empty section</string>
    <plurals name="cancel_uploads">
        <item quantity="one">Cancel upload</item>
        <item quantity="other">Cancel uploads</item>
    </plurals>
    <string name="remove_attachment">Remove attachment</string>
    <string name="you_can_only_have_one_file_attachment_per_section">You can only have one file attachment per section</string>
    <string name="attach_a_file">Attach a file</string>
    <string name="click_and_hold_to_cancel_upload">Click and hold to cancel upload</string>
    <string name="image_from_gallery">From gallery</string>
    <string name="image_from_url">From URL</string>
    <string name="open_source_notices">Open source notices</string>
    <string name="add_section">Add section</string>
    <string name="submit">Submit</string>
    <string name="required_for_contributors_tap_to_add">Required for contributors. Tap to add.</string>
    <string name="submitting">Submitting…</string>
    <string name="submission_failed_try_again_later">Submission failed. Try again later</string>
    <string name="do_you_want_to_delete_this_draft">Do you want to delete this draft?</string>
    <string name="this_cannot_be_undone">This cannot be undone.</string>
    <string name="submitted_for_review">Submitted for Review</string>
    <string name="changes_requested">Changes Requested</string>
    <string name="published_status">Published</string>
    <string name="unsubmit">Unsubmit</string>
    <string name="unpublish">Unpublish</string>
    <string name="do_you_want_to_unsubmit_this_lesson">Do you want to unsubmit this lesson?</string>
    <string name="the_lesson_will_return_to_your_drafts">The lesson will return to your drafts.</string>
    <string name="set_as_featured_lesson">Set as featured lesson</string>
    <string name="share">Share</string>
</resources>