<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_resource_share"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share" />

    <item
        android:id="@+id/menu_admin_edit_card_list_content"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/edit" />

    <item
        android:id="@+id/menu_admin_unpublish"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/unpublish" />

    <item
        android:id="@+id/menu_mod_promote_to_featured"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/set_as_featured_lesson" />

</menu>